--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,22 +1,20 @@
 
 <h1 class="productName"><%= @product.name %></h1>
-<p class="productPrice"><%= @product.price %></p>
-<p class="productInventory"><%= @product.inventory %></p>
-<p class="productDescription"><%= @product.description %></p>
+<p class="productPrice">Price: $<%= @product.price %></p>
+<p class="productInventory">Inventory: <%= @product.inventory %></p>
+<p class="productDescription">Description: <%= @product.description %></p>
 
 <a href="#" class="js-next" data-id="<%= @product.id %>">Next Product</a>
 
 <script type="text/javascript" charset="utf-8">
-$(function () {
-  $(".js-next").on("click", function(e) {
-    e.preventDefault()
-    var nextId = parseInt($(".js-next").attr("data-id")) + 1;
-    $.getJSON("/products/" + nextId + "/product_data", function(data) {
+$(function(){
+  $(".js-next").on("click", function(){
+    const nextId = parseInt($('.js-next').attr('data-id')) + 1;
+    $.get("/products/" + nextId + "/data", function(data){
       $(".productName").text(data["name"]);
-      $(".productPrize").text(data["prize"]);
+      $(".productPrice").text(data["price"]);
       $(".productInventory").text(data["inventory"]);
-      // re-set the id to current on the link
-      $(".js-next").attr("data-id", data["id"]);
+      $(".productDescription").text(data["description"]);
     });
   });
 });
